$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-03-16 [B] Fixed deprecated warning message on plugin manager (thread ID 62560) {eenemeenemuu}
2010-03-16 [O] Updated Polish language file (user contribution) {GauGau}
2010-03-15 [D] Added documentation section about forgotten passwords {GauGau}
2010-03-14 [D] Fixed link to upgrade section (thread ID 64092) {GauGau}
2010-03-13 [B] Fixed search issue (thread ID 64087) {eenemeenemuu}
2010-03-12 [D] Added details about language selectors to documentation {GauGau}
2010-03-12 [C] Fixed contact form validation issues (thread ID 64074) {eenemeenemuu}
2010-03-12 [C] Further improved curve IE6 compatibility {timoswelt}
2010-03-12 [M] Moved valid_meta_albums array to init.inc.php (thread ID 63977) {eenemeenemuu}
2010-03-12 [C] Fixed comment input box width {eenemeenemuu}
2010-03-12 [C] Curve theme menu and layout is now IE6 compatible {timoswelt}
2010-03-12 [A] Added Luxembourgish to language variables as a preparation for the language file contribution {GauGau}
2010-03-10 [B] Fixed validation issue with curve theme (thread ID 64041) {GauGau}
2010-03-10 [D] Added GD logo {GauGau}
2010-03-10 [B] Fixed error message for invalid meta albums entered in 'content of the main page' (thread ID 63977) {eenemeenemuu}
2010-03-10 [D] Fixed broken images inside documentation that refered to rating {GauGau}
2010-03-08 [C] Fixed missing space between album admin menu items (thread ID 63987) {GauGau}
2010-03-08 [C] Fixed mis-alignement of album description in index view (thread ID 63990) {GauGau}