@@ -16,6 +16,7 @@
   $Date$
 **********************************************/
 
+
 body {
     background: #E9EEF2 url(images/backdrop.png) repeat-x;
     font-family : Verdana, Arial, Helvetica, sans-serif;
@@ -46,7 +47,7 @@ body {
     display: block;
     padding-top: 5px;
     padding-right: 20px;
-    padding-bottom: 0pt;
+    padding-bottom: 0px;
     padding-left: 0px;
 }
 
@@ -67,6 +68,7 @@ body {
     background-attachment: scroll;
     background-position: 0pt -633px;
     padding-left: 20px;
+    padding-bottom: 1px;
 }
 
 #cpg_header_block_outer div.cpg_header_block_inner {
@@ -80,7 +82,6 @@ body {
     padding-right: 20px;
     padding-bottom: 0pt;
     padding-left: 0px;
-    min-height: 95px;
 }
 
 #cpg_main_block_outer  {
@@ -90,6 +91,8 @@ body {
     background-attachment: scroll;
     background-position: left top;
     padding-left: 20px;
+    padding-top: 1px;
+    padding-bottom: 1px;
 }
 
 #cpg_main_block_outer div.cpg_main_block_inner {
@@ -99,7 +102,7 @@ body {
     background-attachment: scroll;
     background-position: right center;
     display: block;
-    padding-top: 0px;
+    padding-top: 1px;
     padding-right: 20px;
     padding-bottom: 0px;
     padding-left: 0pt;
@@ -145,14 +148,20 @@ body {
     background-position: 100% -200px;
     display: block;
     padding-top: 3px;
-    padding-right: 0pt;
     padding-bottom: 3px;
+    padding-right: 0pt;
     padding-left: 0pt;
 }
 
 #sysmenu {
     margin-top: 5px;
 }
+
+.menuheight {
+    width: 1px;
+    height: 95px;
+}
+
 
 table {
     font-size: 12px;
@@ -171,7 +180,6 @@ h1{
 h2 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
-    margin: 0px;
 }
 
 h3 {
@@ -188,8 +196,6 @@ p {
 }
 
 pre.filepath {
-    margin: 0px;
-    padding: 0px;
 }
 
 .textinput {
@@ -457,7 +463,7 @@ a:hover.button, a:hover.admin_menu {
 .navmenu a:hover {
     background : #EFEFEF ;
     text-decoration: none;
-    color:         #000000;
+    color: #000000;
 }
 
 .icon {
@@ -646,7 +652,6 @@ a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlet
     border: #BDBEBD;
     background-color: #EFEFEF;
     width : 100%;
-    margin : 0px;
 }
 
 .clickable_option {
@@ -682,10 +687,6 @@ a:link .middlethumb,a:visited .middlethumb,a:focus .middlethumb,a:hover .middlet
     font-family: Arial, Helvetica, sans-serif;
     font-weight:bold;
     text-align : center;
-    padding-top:0px;
-    padding-bottom:0px;
-    margin-top:0px;
-    margin-bottom:0px;
     line-height:1.0em;
 }
 
@@ -973,9 +974,9 @@ main_menu {
 
 .dropmenu li {
     float: left;
+    position: relative;
     padding: 0;
     margin: 0;
-    position: relative;
 }
 
 .dropmenu li ul {
@@ -991,7 +992,6 @@ main_menu {
 
 .dropmenu li li {
     width: 19em;
-    margin: 0;
     border-left: solid 1px #999;
     border-right: solid 1px #999;
 }
@@ -1059,7 +1059,6 @@ main_menu {
     font-size: 0.8em;
     color: white;
     background: url(images/menu_gfx.png) no-repeat 0 -30px;
-    padding: 0;
     margin-left: 12px;
     margin-right: 0px;
     cursor: pointer;
@@ -1113,7 +1112,6 @@ main_menu {
     font-size: 0.8em;
     color: white;
     background: url(images/menu_gfx.png) no-repeat 0 -30px;
-    padding: 0;
     cursor: pointer;
 }
 
