@@ -11,9 +11,8 @@
 <link rel="shortcut icon" href="favicon.ico" />
 <!--[if lt IE 7]>
 <style>
-body {behavior: url(themes/curve/csshover3.htc );}
 .dropmenu li {width: 1px;} .dropmenu li a.firstlevel span.firstlevel {white-space: nowrap;} .main_menu {overflow: auto;}
-#cpg_header_block_outer div.cpg_header_block_inner {height: auto !important;height: 95px;}
+body {behavior: url(themes/curve/csshover3.htc );}
 </style>
 <![endif]-->
 {JAVASCRIPT}
@@ -43,12 +42,12 @@ body {behavior: url(themes/curve/csshover3.htc );}
 		</div>
 	</div>
     <div id="cpg_header_block_outer">
-		<div class="cpg_header_block_inner" style="border-bottom:1px solid white">
+		<div class="cpg_header_block_inner">
 			<div id="main_menu">
 					{SYS_MENU}
 					{SUB_MENU}
 					{ADMIN_MENU}
-			</div>
+			</div><img src="images/spacer.gif" class="menuheight" alt="" />
 			<div class="clearer"></div>
 			{MESSAGE_BLOCK}
 		</div>
